--- a/Exp.html
+++ b/Exp.html
@@ -33,7 +33,7 @@
       <p></p>
       <div class="ik"> <img src="Picture\mylogo.jpg" alt= "Image" height="200" width="250"/></div>
       <p></p>
-      <a href="Home.html">Home</a>
+      <a href="index.html">Home</a>
       <p></p>
       <a href="Exp.html">About Me</a>
       <p></p>
