--- a/solution.html
+++ b/solution.html
@@ -121,7 +121,7 @@
       <tr>
           <th>Super Tip</th>
           <th>
-              Do not forget to document after ecah install, configuration or deploynemnnts.<br> <br>
+              Do not forget to document after each install, configuration or deploynemnnts.<br> <br>
 
               Take note of the where you found the answers,the page number of the book, the video 
               or the link to the site you got the solution from. <br> <br>
