--- a/solution.html
+++ b/solution.html
@@ -151,7 +151,7 @@
 <div class="myFooter">
   <footer>
     <br>
-    <a href="holmes.devon17@gmail.com"><img src="Picture\icon1.jpg" alt= "Image" height="50" width="80"/></a>
+    <a href="contact.html"><img src="Picture\icon1.jpg" alt= "Image" height="50" width="80"/></a>
     <p>@ Devon Holmes</p>
     <br>
   </footer>
