--- a/Exp.html
+++ b/Exp.html
@@ -121,8 +121,7 @@
 
             <div class="Ep">
                 <p>
-                    I'd like to assume 
-                    that education and experience equal skills. My education and work experience have
+                     What I have discovered is that education and experience equal skills. Combining the two have
                      helped me develop these valuable skill: 
                     
                 </p>
