--- a/Exp.html
+++ b/Exp.html
@@ -121,8 +121,8 @@
 
             <div class="Ep">
                 <p>
-                     What I have discovered is that education and experience equal skills. Combining the two have
-                     helped me develop these valuable skill: 
+                     What I have discovered is that education and experience equal skills. Combining the two has
+                     helped me develop these valuable skills: 
                     
                 </p>
             </div>  
@@ -143,11 +143,11 @@
 
                     <tr>
                         <td>
-                             <p>Problem solver</p>
+                             <p>Problem solving </p>
                              <p>Good Communication Skills</p>
                              <p>Time management</p> 
                              <p>Customer Care</p>
-                             <p>Task management.</p>
+                             <p>Task management</p>
                              <p>Works well under pressure</p>  
                         
                         </td>
