--- a/solution.html
+++ b/solution.html
@@ -34,7 +34,7 @@
         <p></p>
         <a href="Exp.html">About Me</a>
         <p></p>
-        <a href="solution.html">AUP Soltions</a>
+        <a href="solution.html">AUP Solution</a>
 
     </div>
 
@@ -69,7 +69,7 @@
   <table class="table1">
 
       <tr>
-          <th>Accronyn</th>
+          <th>Acronym</th>
           <th>Meaning</th>
           <th>Action</th>
 
@@ -110,7 +110,7 @@
             understanding by practicing the configuration on Hyper V. This help you put into
             practice of what you have learned.
             </td>
-          <td><b>How to:</b> Practice the solution via Hyper V, Vmare or any virtual environment</td>
+          <td><b>How to:</b> Practice the solution via Hyper V or any virtual environment.</td>
       </tr>
 </table>
 
@@ -121,12 +121,12 @@
       <tr>
           <th>Super Tip</th>
           <th>
-              Do not forget to document after each install, configuration or deploynemnnts.<br> <br>
+              Do not forget to document after each install, configuration or deployments.<br> <br>
 
-              Take note of the where you found the answers,the page number of the book, the video 
+              To take note of the where you found the answers,the page number of the book, the video 
               or the link to the site you got the solution from. <br> <br>
 
-              Rate yourself on how you did, by looking at on how you could have improved or be more effecienty
+              Rate yourself on how you did, by looking at on how you could have improved or be more efficiency
               in your overall performance. </th>
 
       </tr>
@@ -151,7 +151,7 @@
 <div class="myFooter">
   <footer>
     <br>
-    <a href="contact.html"><img src="Picture\icon1.jpg" alt= "Image" height="50" width="80"/></a>
+    <a href="holmes.devon17@gmail.com"><img src="Picture\icon1.jpg" alt= "Image" height="50" width="80"/></a>
     <p>@ Devon Holmes</p>
     <br>
   </footer>
