--- a/loader.html
+++ b/loader.html
@@ -54,7 +54,7 @@
           
               <td>
                   <H3>GeToGo</H3>
-                  <p>Web Service that helps students get organised.</p>
+                  <p>Web Service that helps students get organized.</p>
                  
               </td>
   
