--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
           <div class="contact-info">
             <p><b>Devon Holmes</b></p>
     
-            <b>Email: </b><a href=""><img src="Picture\email2.png">devHolservers@outlook.com</a>
+            <b>Email: </b><a href=""><img src="Picture\email2.png"><p>devHolservers@outlook.com</p></a>
 
 
             
