--- a/Exp.html
+++ b/Exp.html
@@ -122,7 +122,7 @@
             <div class="Ep">
                 <p>
                     
-                     What I have discovered is that education and experience equal skills. Combining the two have
+                     What I have discovered is that education and experience equal skills. Combining the two has
                      helped me develop these valuable skill: 
                     
                 </p>
